force-app/main/default/objects/Yellow_AI_API_Setup__mdt/Yellow_AI_API_Setup__mdt.object-meta.xml
<CustomObject>
    <description>Contains URL , api-key , bot Id for yellowai</description>
    <label>Yellow AI API Setup</label>
    <pluralLabel>Yellow AI API Setups</pluralLabel>
</CustomObject>