force-app/main/default/objects/Yellow_AI_API_Setup__mdt/fields/Bot_ID__c.field-meta.xml
<CustomField>
    <fullName>Bot_ID__c</fullName>
    <label>Bot ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>