force-app/main/default/objects/Yellow_AI_API_Setup__mdt/fields/Sender_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Sender_Phone_Number__c</fullName>
    <label>Sender Phone Number</label>
    <type>Phone</type>
</CustomField>