force-app/main/default/objects/Yellow_AI_API_Setup__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Post URL to Yellowai</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>