force-app/main/default/objects/Yellow_AI_API_Setup__mdt/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <label>x-api-key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>